# kubemq-a2a

./: README.md
burnin/: README.md  burnin-config.yaml  pyproject.toml
burnin/src/kubemq_a2a_burnin/: __init__.py  __main__.py  config.py  runner.py
burnin/src/kubemq_a2a_burnin/agents/: __init__.py  base.py  echo_agent.py  error_agent.py  manager.py  oversize_agent.py  slow_agent.py  stream_agent.py
burnin/src/kubemq_a2a_burnin/clients/: __init__.py  a2a_client.py  metrics_client.py  registry_client.py
burnin/src/kubemq_a2a_burnin/metrics/: __init__.py  tracker.py
burnin/src/kubemq_a2a_burnin/suites/: __init__.py  a2a_errors.py  a2a_limits.py  a2a_registry.py  a2a_soak.py  a2a_streaming.py  a2a_sync.py  base.py
burnin/tests/: test_config.py
examples/python/: README.md  pyproject.toml
examples/python/errors/agent-not-found/: README.md  client.py
examples/python/errors/invalid-request/: README.md  client.py
examples/python/errors/timeout/: README.md  agent.py  client.py
examples/python/limits/concurrency-limit/: README.md  agent.py  client.py
examples/python/limits/response-size/: README.md  agent.py  client.py
examples/python/registry/agent-info/: README.md  agent.py  client.py
examples/python/registry/deregister-agent/: README.md  agent.py  client.py
examples/python/registry/heartbeat/: README.md  agent.py  client.py
examples/python/registry/list-agents/: README.md  agent.py  client.py
examples/python/registry/register-agent/: README.md  agent.py  client.py
examples/python/streaming/basic-stream/: README.md  agent.py  client.py
(+272 files in other folders)
