[project]
name = "kubemq-a2a-burnin"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubemq_a2a_burnin"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=1.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
