[project]
name = "kubemq-a2a-examples-python"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.25",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Examples are loose scripts under registry/, sync/, etc. — no top-level package yet (Phase 3).
[tool.uv]
package = false
